
150427	Netmap support on FreeBSD.

150424	Replaced all calls to perror with debug(..., strerror(errno);
	Updated penlog and penlogd to use diag.[ch].

150422	More refactoring: broke out conn.[ch], client.[ch], server.[ch],
	idler.[ch].
	Made a hash index such that the load balancer may balance load.

150420	Broke out Windows code from pen.c into windows.c. Added windows.h.

150419	Broke out public definitions for dsr into dsr.h.
	Broke out memory management into memory.[ch].
	Broke out dignostic and logging functions into diag.[ch].
	Broke out settings into settings.[ch].
	Broke out access lists into acl.[ch].
	Broke out event initialization into event.[ch].
	Added pen_epoll.h, pen_kqueue.h, pen_poll.h, pen_select.h.
	Broke out pen_aton et al into netconv.[ch].

150416	Added dsr.c

150408	Bug in copy_down affecting SSL connections fixed.
	Released 0.27.5.

150408	Updated ocsp stapling to be compatible with server name indication.
	Added pen-ocsp.sh script.
	Released 0.27.4.

150407	SSL code broken out into ssl.[ch]. SSL context creation broken
	out from ssl_init to ssl_create_context.
	Server Name Indication support. New command to enable:
	ssl_sni_path PATH
	where PATH is the name of a directory containing domain.key,
	domain.crt and domain.ca files for each domain.

150406	OCSP stapling. New command ssl_ocsp_response filename
	specifies the location of the ocsp response to be stapled.
	The response must be pre-fetched. The idea was borrowed
	from Rob Stradling.

150403	New command ssl_client_renegotiation_interval specifies the
	minimum number of seconds the client must wait between
	renegotiation requests. Default 3600.

150402	Enabled SSL session resumption.
	In do_cmd: don't print "ignoring command" for comments starting
	with '#'.

150330	Added ssl_option no_tlsv1.1 and ssl_option no_tlsv1.2 to disable
	SSL 1.1 and 1.2 respectively.

150330	Released 0.27.3.

150330	Added autoconf check that the ECDHE is available and not disabled.